# babyccino

./: .gitignore  README.md  SPEC.md
ios/Babyccino/: CONVERSATION_ARCHITECTURE.md  CONVERSATION_FLOW.md  DEBUGGING.md  JSON_STRUCTURED_OUTPUT.md  MLX_IMPLEMENTATION_STATUS.md  MLX_INTEGRATION.md  MODEL_SELECTION.md  ONBOARDING_AND_LLM_STATUS.md  REMOVED_QWEN_05B.md
ios/Babyccino/Babyccino/: BabyccinoApp.swift  ContentView.swift
ios/Babyccino/Babyccino.xcodeproj/: project.pbxproj
ios/Babyccino/Babyccino/Models/: CodeResult.swift  Flowchart.swift  FunctionRequirements.swift  IntentAnalysis.swift  Message.swift  ServerHealth.swift  TestCase.swift
ios/Babyccino/Babyccino/Services/: FlowchartGenerator.swift  FlowchartRouter.swift  LLMService.swift  LLMServiceFactory.swift  MLXLLMService.swift  MockLLMService.swift  ModelInfo.swift  ModelManager.swift  ServerClient.swift  SimpleTokenizer.swift
ios/Babyccino/Babyccino/Views/: ChatView.swift  FlowchartView.swift  MessageBubbleView.swift  OnboardingView.swift  SettingsView.swift  TestApprovalView.swift
server/: .env.example  README.md  pyproject.toml  requirements.txt  test_request.json
server/babyccino_server/: __init__.py  config.py  main.py
server/babyccino_server/api/: flowchart.py  generate.py  health.py  tests.py
server/babyccino_server/models/: __init__.py  flowchart.py  requests.py  responses.py
server/babyccino_server/services/: __init__.py  code_generator.py  complexity_analyzer.py  flowchart_generator.py  llm_client.py  ollama_client.py  test_proposer.py  test_runner.py
