[project]
name = "babyccino-server"
version = "0.1.0"
description = "FastAPI server for conversational code generation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "ollama>=0.1.6",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "ruff>=0.1.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
